--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">Home</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a>
+                                </li>
+                                <li class="nav-item">
                                     <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
                                 </li>
                             }
