--- a/AuthSystem/wwwroot/css/Chat/userChat.css
+++ b/AuthSystem/wwwroot/css/Chat/userChat.css
@@ -61,6 +61,7 @@
 .username {
     margin-bottom: 5px;
     font-size: 1em;
+    font-weight: 500;
 }
 
 .message {
@@ -68,7 +69,7 @@
     font-size: 0.9em;
 }
 
-.date {
+.time {
     font-size: 0.8em;
     color: #888;
     margin-top: 2px;
@@ -83,3 +84,32 @@
     #sendButton:hover {
         background-color: darkcyan;
     }
+
+.date-separator {
+    text-align: center;
+    background-color: transparent;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin: 20px 190px;
+    padding: 0;
+    border: none;
+    width: 100%; /* Ensure the separator spans the full width */
+}
+
+    .date-separator .date {
+        display: inline-block;
+        background-color: white;
+        padding: 0 10px;
+    }
+
+@media screen and (max-width: 576px) {
+    .date-separator {
+        margin: 20px 50px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .date-separator {
+        margin: 20px 100px;
+    }
+}
