--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -25,9 +25,7 @@
                     <ul class="navbar-nav ml-auto">
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            <li class="nav-item">
-                                <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-                            </li>
+                            
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
@@ -37,11 +35,17 @@
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/UserActivity">User Activity</a>
+                                </li>
+                                <li class="nav-item">
                                     <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
                                 </li>
                             }
                             else
                             {
+                                <li class="nav-item">
+                                    <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                                </li>
                                 <li class="nav-item">
                                     <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
                                 </li>
