--- a/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
@@ -3,7 +3,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="~/css/Admin/adminDash.css" />
+<link rel="stylesheet" href="~/css/Admin/userManagement.css" />
 
 <div style="padding-left: 20px; padding-bottom:15px;">
     <h2 style="margin-left:15px;">User Management</h2>
