--- a/AuthSystem/wwwroot/css/Admin/adminDashboard.css
+++ b/AuthSystem/wwwroot/css/Admin/adminDashboard.css
@@ -1,3 +1,42 @@
 ﻿.custom-card {
     margin-left: 25px; /* Adjust as needed */
 }
+
+.container {
+    max-width: 100%;
+    margin-top:60px;
+   
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.bg-sagegreen {
+    background-color: #8FBC8F;
+}
+
+.bg-lilac {
+    background-color: #C8A2C8;
+}
+
+.bg-turquoise {
+    background-color: #40E0D0;
+}
+
+.card-text {
+    font-size: 1.5rem;
+}
+
+.card .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+}
+
+.card .fa {
+    margin-bottom: 1rem;
+}
