--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -29,10 +29,10 @@
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">Home</a>
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a>
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">User Management</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/UserActivity">User Activity</a>
